--- a/LoveOne/project/index.html
+++ b/LoveOne/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Create Couples App Landing Page</title>
+    <title>LoveOne for your genuine couple</title>
   </head>
   <body>
     <div id="root"></div>
