--- a/LoveOne/project/index.html
+++ b/LoveOne/project/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="gyss21ghqUt6Vj0o16bsp1QRPdE2m1Pv1pvCw91iB-M" />
+
     <title>LoveOne for your genuine couple</title>
   </head>
   <body>
